--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
-      font-family: Arial;
+      background: linear-gradient(135deg, #8b0000, #ff0000); /* RED */
+      font-family: Arial, sans-serif;
     }
     .box {
       background: white;
       padding: 30px;
-      width: 300px;
+      width: 320px;
       border-radius: 8px;
       text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
     input, button {
       width: 90%;
@@ -25,13 +26,19 @@
       margin: 10px 0;
     }
     button {
-      background: #2a5298;
-      color: white;
       border: none;
       cursor: pointer;
+      color: white;
+      font-size: 14px;
+    }
+    .login-btn {
+      background: #b22222;
+    }
+    .signup-btn {
+      background: #444;
     }
     .footer {
-      margin-top: 10px;
+      margin-top: 12px;
       font-size: 12px;
       color: gray;
     }
@@ -40,9 +47,13 @@
 <body>
   <div class="box">
     <h2>Login</h2>
+
     <input type="text" placeholder="Username">
     <input type="password" placeholder="Password">
-    <button>Login</button>
+
+    <button class="login-btn">Login</button>
+    <button class="signup-btn">Sign Up</button>
+
     <div class="footer">Powered by aravind@2026</div>
   </div>
 </body>
